# powadb

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  codecov.yml  index.html  latest.json  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: check-backend.sh  check-frontend.sh  react-doctor.sh
.github/workflows/: checks.yml  release.yml
scripts/: build.sh  bump-version.sh  hide-dmg-volume-icon.sh  validate-themes.mjs
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: error.rs  job_registry.rs  lib.rs  main.rs  pool_registry.rs  secret_store.rs  sql_split.rs  storage.rs  storage_migrations.rs
src-tauri/src/commands/: capabilities.rs  connections.rs  databases.rs  ddl_util.rs  diagram.rs  diagram_ddl.rs  diagram_diff.rs  dump.rs  folders.rs  geo.rs  history.rs  mod.rs  query.rs  s3.rs  schema.rs  settings.rs  snippets.rs  table_ops.rs  themes.rs
src-tauri/src/drivers/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/engine/: mod.rs  mongo.rs  mysql.rs  postgres.rs  s3.rs  sqlite.rs
src-tauri/src/ssh/: config.rs  mod.rs  tunnel.rs
src-tauri/src/wireguard/: config.rs  mod.rs  tunnel.rs
src/components/: BrowseTabPane.tsx  CellPreviewDialog.test.tsx  CellPreviewDialog.tsx  ChangelogView.tsx  ColorPicker.test.tsx  ColorPicker.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectionForm.tsx  ConnectionList.tsx  ExplainView.tsx  ExportDatabaseDialog.tsx  FkCell.tsx  FolderForm.tsx  HistoryPanel.tsx  ImportSqlDialog.tsx  ObjectBrowserPane.tsx  QueryTabPane.tsx  QueryView.tsx  S3BucketTree.tsx  SchemaTree.tsx  ScriptResults.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  Sidebar.tsx  SnippetsPanel.tsx  ThemeEditor.tsx  TopBar.tsx  UpdateChecker.tsx
src/ipc/: diffOpSummary.test.ts  index.ts
src/lib/: a11y.test.ts  a11y.ts  bytea.test.ts  bytea.ts  columnTypes.test.ts  columnTypes.ts  communityThemes.test.ts  communityThemes.ts  diagramSchema.test.ts  events.ts  fileIcons.test.ts  fileIcons.ts  schemas.test.ts  schemas.ts  themeTokens.test.ts  themeTokens.ts  updater.test.ts  updater.ts  utils.test.ts
src/stores/: columnDisplay.test.ts  columnDisplay.ts  connections.test.ts  connections.ts  panelLayouts.test.ts  panelLayouts.ts  schema.test.ts  schema.ts  tabs.test.ts  tabs.ts  theme.test.ts  theme.ts  ui.test.ts  ui.ts  windowState.ts
src/utils/: folderTree.test.ts  (+7 more)
themes/: README.md  catppuccin-latte.powadb-theme.json  catppuccin-mocha.powadb-theme.json  dracula.powadb-theme.json  gruvbox-dark.powadb-theme.json  nord.powadb-theme.json  solarized-dark.powadb-theme.json  solarized-light.powadb-theme.json  tokyo-night.powadb-theme.json
(+59 files in other folders)
