[package]
name = "powadb"
version = "0.3.0"
description = "PowaDB — a fast modern database client"
authors = ["aza"]
edition = "2021"

[lib]
name = "powadb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "macros", "chrono", "uuid", "json", "bigdecimal"] }
thiserror = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
which = "6"
