[package]
name = "powadb"
version = "0.9.2"
description = "PowaDB — a fast modern database client"
authors = ["aza"]
edition = "2021"

[lib]
name = "powadb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "macros", "chrono", "uuid", "json", "bigdecimal", "ipnetwork", "mac_address", "bit-vec"] }
thiserror = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
which = "6"
boringtun = "0.7.1"
smoltcp = "0.13.1"
ipnet = "2.12.0"
base64 = "0.22.1"
x25519-dalek = "2.0.1"
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
mongodb = "3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
